fixed second hand so it is behind the hour min hands

--- a/style.css
+++ b/style.css
@@ -100,18 +100,18 @@ body {
   transform: translate(-50%, -50%);
   border-radius: 50%;
 }
-.clock .secHand {
-  width: 3px;
-  height: 45%;
-  background-color: red;
-}
 .clock .minHand {
   width: 7px;
   height: 40%;
   background-color: black;
 }
+.clock .secHand {
+  width: 3px;
+  height: 45%;
+  background-color: red;
+}
 .clock .hrHand {
   width: 10px;
-  height: 35%;
+  height: 25%;
   background-color: black;
 }
